# engine

./: .gitignore  BUILD.gn  DEPS
ci/licenses_golden/: licenses_flutter
common/: config.gni
flow/: compositor_context.cc  compositor_context.h  scene_update_context.cc  surface.h
flow/layers/: image_filter_layer_unittests.cc  performance_overlay_layer.cc  performance_overlay_layer_unittests.cc  physical_shape_layer.h  picture_layer_unittests.cc
fml/: BUILD.gn  concurrent_message_loop.h  message_loop.h  message_loop_impl.cc  message_loop_impl.h  message_loop_task_queues.cc  task_runner.cc  task_runner_merger.cc  task_runner_merger.h  task_runner_merger_unittests.cc
fml/platform/darwin/: scoped_nsobject.h
lib/snapshot/: BUILD.gn
lib/ui/compositing/: scene_builder.cc  scene_builder.h
lib/ui/window/: window.h
lib/web_ui/lib/src/engine/: window.dart
runtime/: BUILD.gn  dart_isolate.cc
shell/common/: BUILD.gn  pipeline.h  platform_view.cc  platform_view.h  rasterizer.cc  rasterizer.h  shell.cc  shell.h  shell_test.cc  shell_test_platform_view_gl.cc  shell_test_platform_view_gl.h  shell_test_platform_view_vulkan.cc  shell_test_platform_view_vulkan.h  task_runner_merger.cc  task_runner_merger.h  vsync_waiter_fallback.h
shell/gpu/: BUILD.gn  gpu_surface_delegate.h  gpu_surface_gl.cc  gpu_surface_gl.h  gpu_surface_gl_delegate.h  gpu_surface_metal.h  gpu_surface_metal.mm  gpu_surface_software_delegate.h  gpu_surface_vulkan.cc  gpu_surface_vulkan.h  gpu_surface_vulkan_delegate.cc  gpu_surface_vulkan_delegate.h
shell/platform/android/: BUILD.gn  android_surface_gl.cc  android_surface_gl.h  android_surface_software.cc  android_surface_software.h  android_surface_vulkan.cc  android_surface_vulkan.h  platform_view_android.cc  platform_view_android.h
shell/platform/android/external_view_embedder/: external_view_embedder_unittests.cc
shell/platform/android/io/flutter/embedding/android/: MotionEventTracker.java
shell/platform/android/surface/: android_surface_mock.h
shell/platform/darwin/common/: BUILD.gn  render_context.h
shell/platform/darwin/common/metal/: BUILD.gn  darwin_context_metal.h
shell/platform/darwin/ios/: BUILD.gn  ios_context.mm  ios_context_gl.h  ios_context_software.h  ios_surface_gl.h  ios_surface_gl.mm  ios_surface_metal.h  ios_surface_metal.mm  ios_surface_software.h  ios_surface_software.mm  platform_view_ios.h  platform_view_ios.mm  rendering_api_selection.h
shell/platform/darwin/ios/framework/Source/: FlutterEngine.mm  FlutterPlatformViews.mm  FlutterPlatformViews_Internal.h  FlutterView.h  FlutterView.mm
shell/platform/darwin/macos/: BUILD.gn
shell/platform/darwin/macos/framework/Source/: FlutterEngine.mm  FlutterMacOSCompositor.mm  FlutterMetalRenderer.mm  FlutterOpenGLRenderer.mm  FlutterTextureRegistrar.mm  FlutterViewController.mm  FlutterViewController_Internal.h
shell/platform/embedder/: BUILD.gn  embedder.cc  embedder.h  embedder_surface_gl.h  embedder_surface_metal.h  embedder_surface_metal.mm  embedder_thread_host.cc  platform_view_embedder.cc  platform_view_embedder.h
shell/platform/embedder/tests/: embedder_config_builder.cc  embedder_config_builder.h  embedder_test.cc  embedder_test.h  embedder_test_context.cc  embedder_test_context.h  embedder_test_context_gl.cc  embedder_test_context_metal.cc  embedder_test_context_metal.h  embedder_unittests.cc  embedder_unittests_metal.cc  embedder_unittests_util.cc  embedder_unittests_util.h
shell/platform/fuchsia/: BUILD.gn
shell/platform/fuchsia/dart-pkg/fuchsia/: BUILD.gn
shell/platform/fuchsia/dart-pkg/fuchsia/sdk_ext/: fuchsia.cc
shell/platform/fuchsia/dart-pkg/zircon/: BUILD.gn
shell/platform/fuchsia/dart-pkg/zircon/sdk_ext/: handle.cc  handle.h  handle_waiter.cc  handle_waiter.h  natives.cc  system.cc  system.h
shell/platform/fuchsia/dart_runner/: BUILD.gn  dart_component_controller.cc  dart_runner.cc  main.cc  service_isolate.cc
shell/platform/fuchsia/flutter/: BUILD.gn  component.cc  engine.cc  main.cc  noop_unittest.cc  platform_view.h  platform_view_unittest.cc  renderer.h  runner.cc  runner.h  surface.cc  surface.h
shell/platform/fuchsia/flutter/meta/: flutter_aot_product_runner.cmx  flutter_aot_runner.cmx
shell/platform/fuchsia/flutter/renderer/: BUILD.gn  scenic_accessibility_bridge.cc  scenic_accessibility_bridge.h  scenic_input_handler.cc  scenic_input_handler.h  scenic_session.cc  scenic_session.h  scenic_view.cc  scenic_view.h  scenic_window.cc  scenic_window.h
shell/platform/fuchsia/utils/: BUILD.gn  files.cc  handle_exception.cc  logging.h  mapped_resource.cc  mapped_resource.h  tempfs.cc  thread.cc  thread.h  vmo.cc  vmo.h  vmservice_object.cc
shell/testing/: BUILD.gn
testing/: run_tests.py  test_metal_context.h  test_metal_context.mm  test_metal_surface.cc  test_metal_surface.h  test_metal_surface_impl.h  test_metal_surface_impl.mm  test_metal_surface_unittests.cc
tools/: gn
tools/fuchsia/: build_fuchsia_artifacts.py  merge_and_upload_debug_symbols.py
vulkan/: BUILD.gn
